integrated protected APIs with frontend